# xforme

./: .gitignore  .justfile  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/skills/xforme/: SKILL.md
data/: portfolio_statement.csv  portfolio_statement.json  portfolio_statement.txt  portfolio_statement.yaml  sales_receipt.csv  sales_receipt.json  sales_receipt.txt  sales_receipt.yaml
examples/: portfolio_statement.rs  sales_receipt.rs
src/: data.rs  demo_template.rs  document.rs  engine.rs  expr.rs  lib.rs  main.rs  pdf.rs  salesreceipt.rs  template.rs  value.rs  xlsx_template.rs
src/render/: mod.rs  pdf.rs  xlsx.rs
src/xlsx_template/: formula.rs
templates/: portfolio_statement_template.xlsx  sales_receipt_template.xlsx
tests/: xlsx_template_e2e.rs
