[package]
name = "xforme"
version = "0.1.0"
edition = "2024"
default-run = "xforme"
authors = ["Dmitriy Kumshayev <dq@mail.com>"]
description = "Stream data through Excel templates to mass-produce spreadsheets and PDFs, formatting and formulas intact."
license = "MIT"
readme = "README.md"
repository = "https://github.com/dkumsh/xforme"
homepage = "https://github.com/dkumsh/xforme"
documentation = "https://docs.rs/xforme"
keywords = ["excel", "xlsx", "template", "pdf", "report"]
categories = ["template-engine", "command-line-utilities"]

[dependencies]
printpdf = "0.9.1"
rust_xlsxwriter = "0.95.0"
umya-spreadsheet = "3.0.0"
